# thus-saith

./: .gitignore  Cargo.toml  LICENSE  README.md
archive/: thus_saith_my_waifu  thus_saith_my_waifu.py
config/: default.toml
src/: arg.rs  check.rs  cli.rs  config.rs  error.rs  exit.rs  main.rs  quote_pool.rs  sanity.rs  select.rs  signal.rs  tokenizer.rs  typist.rs  waifu.rs
