[package]
name = "thus-saith"
version = "0.5.0"
edition = "2024"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["command-line-utilities"]
repository = "https://github.com/Lingxuan-Ye/thus-saith"
readme = "README.md"
license = "MIT"
description = "Thus saith my waifu!"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["cargo"] }
ctrlc = "3.4.5"
dirs = "6.0.0"
eoe = "0.3.1"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
rand = "0.9.0"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
