[package]
name = "thus-saith"
version = "0.6.4"
edition = "2024"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["command-line-utilities"]
repository = "https://github.com/Lingxuan-Ye/thus-saith"
readme = "README.md"
license = "MIT"
description = "Thus saith my waifu!"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["cargo"] }
ctrlc = "3.4.7"
dirs = "6.0.0"
eoe = "0.3.2"
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

[profile.release]
strip = true
lto = true
panic = "abort"
