[package]
name = "thus-saith"
version = "0.6.4"
edition = "2024"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["command-line-utilities"]
repository = "https://github.com/Lingxuan-Ye/thus-saith"
readme = "README.md"
license = "MIT"
description = "Thus saith my waifu!"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["cargo"] }
ctrlc = "3.5.1"
dirs = "6.0.0"
eoe = "0.3.3"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"

[profile.release]
strip = true
lto = true
panic = "abort"
